<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP50_Conveyor_Cam_Seq" Id="{44605dd1-04c3-419c-80a0-eb9696967859}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP50_Conveyor_Cam_Seq
VAR
	OP50_Conveyor_FB	: Servo_Conveyor_FB;
	OP50_Camera_Trigger : BOOL;
	Conveyor_Track_Delay: TON;
	Conveyor_Track_OFF_Delay: TON;
	Conveyor_Continuous_Run: BOOL;
	Conveyor_Velocity_mode: BOOL;
	 OP50_Camera_Trigger_Ack : BOOL;
	Conv_Cam_Step: INT;
	OP50_Miss_Trigger	: BOOL;
	Conv_Temp: BOOL;
	Conv_Step_no: INT;
	Temp_Counter_LH: UINT;
	Temp_Counter_RH: UINT;
	Toggle_Pos_LH : R_TRIG;
	Toggle_Neg_LH : F_TRIG;
	Toggle_Pos_RH : R_TRIG;
	Toggle_Neg_RH : F_TRIG;
	LH_Cam_Completed : BOOL;
	RH_Cam_Completed : BOOL;
	Drum_Jam_Timer	 : TON;
	Toggle_Neg: INT;
	OP50_Camera_Bypass : BOOL;
		Control : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Toggle_Pos_LH(CLK:=OP50_Camera_FB.OP50_LH_Inspection_Status.Inspection_Completed);
Toggle_Neg_LH(CLK:=OP50_Camera_FB.OP50_LH_Inspection_Status.Inspection_Completed);
Toggle_Pos_RH(CLK:=OP50_Camera_FB.OP50_RH_Inspection_Status.Inspection_Completed);
Toggle_Neg_RH(CLK:=OP50_Camera_FB.OP50_RH_Inspection_Status.Inspection_Completed);

IF Toggle_Pos_LH.Q OR Toggle_Neg_LH.Q THEN
	LH_Cam_Completed:=1;	
END_IF
IF Toggle_Pos_RH.Q OR Toggle_Neg_RH.Q THEN
	RH_Cam_Completed:=1;	
END_IF


IF MANUAL_SELECTED AND OP50_ManualSelected THEN               
	IF I50_DRUM_CONV_REV_I306_3 THEN
		SR50_Conv_servo_status.targetVelocity:=OP50_Conv_Rev_Speed_6_3;
		SR50_Conv_servo_status.moveVelocity:=I50_DRUM_CONV_REV_I306_3;
 	ELSIF I50_DRUM_CONV_FWD_I306_4 THEN
		SR50_Conv_servo_status.targetVelocity:=OP50_Conv_Fwd_Speed_7_89;
		SR50_Conv_servo_status.moveVelocity:=I50_DRUM_CONV_FWD_I306_4;	
	ELSE 	
		SR50_Conv_servo_status.moveVelocity:=0;   	
	END_IF  	
END_IF

IF OP50_Model='6.3' THEN
	OP50_Conv_Fwd_Time:=OP50_Conv_Fwd_Time_6_3;
	OP50_Conv_Rev_Time:=OP50_Conv_Rev_Time_6_3;
	OP50_Conveyor_FWD_Speed:= OP50_Conv_Fwd_Speed_6_3;
	OP50_Conveyor_REV_Speed:= OP50_Conv_Rev_Speed_6_3;
END_IF

IF OP50_Model='7.89' THEN
	OP50_Conv_Fwd_Time:=OP50_Conv_Fwd_Time_7_89;
	OP50_Conv_Rev_Time:=OP50_Conv_Rev_Time_7_89;
	OP50_Conveyor_FWD_Speed:= OP50_Conv_Fwd_Speed_7_89;
	OP50_Conveyor_REV_Speed:= OP50_Conv_Rev_Speed_7_89;
END_IF

Conveyor_Velocity_mode:=1;

OP50_Conveyor_FB(
	Conveyor_Prgrm_Start:= OP50_AutoRunning, 
	Conveyor_Prgrm_Reset:= , 
	Conveyor_Continuous_Run:= Conveyor_Continuous_Run, 
	Camera_Trigger_OK := OP50_Camera_Done OR OP50_Camera_Bypass, 
	Fwd_Time_IP:= OP50_Conv_Fwd_Time, 
	Rev_Time_IP:= OP50_Conv_Rev_Time, 
	Track_Overflow := Conveyor_Track_OFF_Delay.Q, 
	Track_Sensor_FB := Conveyor_Track_Delay.Q,
	Conveyor_FWD_Position	:= OP50_Conv_Fwd_Pos,
    Conveyor_REV_Position	:= OP50_Conv_Rev_Pos,
    Velocity_mode			:= Conveyor_Velocity_mode,	
	Conveyor_FWD_Speed:=OP50_Conveyor_FWD_Speed , 
	Conveyor_REV_Speed:=OP50_Conveyor_REV_Speed , 
	LH_Work_Sensor:=CR50_LH_Rej_Cyl.Sensor2 , 
	LH_Home_Sensor:=CR50_LH_Rej_Cyl.Sensor1 , 
	RH_Work_Sensor:=CR50_RH_Rej_Cyl.Sensor2 , 
	RH_Home_Sensor:=CR50_RH_Rej_Cyl.Sensor1 , 
	LH_Camera_OK:=  OP50_LH_Camera_OK OR OP50_Camera_Bypass, 
	LH_Camera_NOK:= OP50_LH_Camera_NOK, 
	RH_Camera_OK:=  OP50_RH_Camera_OK OR OP50_Camera_Bypass, 
	RH_Camera_NOK:= OP50_RH_Camera_NOK,
	Step_Num => Conv_Step_no,
	Camera_Trigger_Ack=> OP50_Camera_Trigger_Ack, 
	Camera_trigger:= OP50_Camera_Trigger,
	Drum_ON=> O50_DRUM_MTR_FWD_Q305_5, 
	LH_Work_Coil=>CR50_LH_Rej_Cyl.AutoCmd2 , 
	LH_Home_Coil=>CR50_LH_Rej_Cyl.AutoCmd1 , 
	RH_Work_Coil=>CR50_RH_Rej_Cyl.AutoCmd2,
	RH_Home_Coil=>CR50_RH_Rej_Cyl.AutoCmd1,
	Ready_to_Pick=> OP50_pick_ready , 
	Pick_Done:=     OP50_pick_done , 
	One_Cycle		:= OP50_One_Cycle,
	Conveyor_Servo_Control_Structure:= SR50_CONV_servo_ctrl );

Conveyor_Track_Delay(IN:= NOT I50_DRUM_FEED_CONV1_OVERFLW_I1101_0 OR NOT I50_DRUM_FEED_CONV2_OVERFLW_I1101_1,PT:=INT_TO_TIME(OP50_Drum_ON_Time));	
Conveyor_Track_OFF_Delay(IN:=I50_DRUM_FEED_CONV1_OVERFLW_I1101_0 AND I50_DRUM_FEED_CONV2_OVERFLW_I1101_1,PT:=INT_TO_TIME(OP50_Drum_OFF_Time));  
	
IF 	OP50_AutoRunning OR Conv_Temp THEN
	IF Conveyor_Track_OFF_Delay.Q THEN
		O50_DRUM_MTR_FWD_Q305_5:=0;
	END_IF
	//IF Conveyor_Track_Delay.Q THEN
	//	O50_DRUM_MTR_FWD_Q305_5:=1;
	//END_IF
	O50_AIR_PURGE_ON_Q1153_4:=1;
	O50_DRUM_RUN_IND_Q306_2:=O50_DRUM_MTR_FWD_Q305_5;
ELSE
	O50_DRUM_RUN_IND_Q306_2:=I50_DRUM_OFF_ON_I306_2;
	O50_DRUM_MTR_FWD_Q305_5:=I50_DRUM_OFF_ON_I306_2;
	O50_AIR_PURGE_ON_Q1153_4:=I50_DRUM_OFF_ON_I306_2;
END_IF

IF (NOT OP50_AutoRunning OR (NOT OP50_LH_Camera_Online OR NOT OP50_RH_Camera_Online)) AND NOT OP50_Camera_Bypass THEN
	Conv_Cam_Step:=10;
END_IF 

CASE Conv_Cam_Step OF
	10: 	OP50_LH_Camera_OK :=0;
            OP50_LH_Camera_NOK:=0;
	        OP50_RH_Camera_OK :=0;
	        OP50_RH_Camera_NOK:=0;
			LH_Cam_Completed  :=0;
			RH_Cam_Completed  :=0;			
			OP50_Camera_Done	:=0;
			OP50_LH_Clr_OK 		:=0;
		    OP50_RH_Clr_OK 		:=0;		
			OP50_LH_Size_OK		:=0;
		    OP50_RH_Size_OK		:=0;	
			Conv_Cam_Step		:=11;	
	
	11: IF ((OP50_Camera_Trigger AND (NOT OP50_Camera_Done)) OR OP50_Miss_Trigger) AND NOT OP50_Camera_Bypass THEN
			OP50_LH_Camera_Trigger:=1;
			OP50_RH_Camera_Trigger:=1;
			Conv_Cam_Step		  :=15;	
		END_IF

	15:	IF LH_Cam_Completed AND RH_Cam_Completed THEN// (NOT OP50_LH_Camera_Trigger) AND (NOT OP50_RH_Camera_Trigger) THEN //(Temp_Counter_LH<OP50_Camera_FB.OP50_LH_Acquisition_ID AND Temp_Counter_RH<OP50_Camera_FB.OP50_RH_Acquisition_ID )THEN
			OP50_LH_Camera_Trigger:=0;
			OP50_RH_Camera_Trigger:=0;
			OP50_Camera_Trigger :=0;
			OP50_Miss_Trigger	:=0;
			Conv_Cam_Step:=25;
		END_IF  
	   
	25: IF OP50_Camera_FB.OP50_LH_Cam_Result[0]=1 AND OP50_Camera_FB.OP50_RH_Cam_Result[0]=1 THEN
			OP50_LH_Camera_OK:=1;
			OP50_RH_Camera_OK:=1;
			Conv_Cam_Step    :=50;
		ELSIF (OP50_Camera_FB.OP50_LH_Cam_Result[2]<>1 OR OP50_Camera_FB.OP50_RH_Cam_Result[2]<>1) THEN	
			OP50_One_Cycle  :=1;
			Conv_Cam_Step   :=50;
		ELSIF (OP50_Camera_FB.OP50_LH_Cam_Result[1]=1 OR OP50_Camera_FB.OP50_RH_Cam_Result[1]=1) AND (OP50_Camera_FB.OP50_LH_Cam_Result[2]=1 AND OP50_Camera_FB.OP50_RH_Cam_Result[2]=1) THEN					
			IF OP50_Camera_FB.OP50_LH_Cam_Result[0]=1 THEN
				OP50_LH_Camera_OK:=1;
			END_IF
			IF OP50_Camera_FB.OP50_RH_Cam_Result[0]=1 THEN
				OP50_RH_Camera_OK:=1;
			END_IF
			Conv_Cam_Step:=30;
		END_IF	
			
   30: 	IF OP50_Camera_FB.OP50_LH_Cam_Result[1]=1 THEN
	   		OP50_LH_Camera_NOK:=1;
  	    END_IF
		IF OP50_Camera_FB.OP50_RH_Cam_Result[1]=1 THEN
	   		OP50_RH_Camera_NOK:=1;
  	    END_IF
		Conv_Cam_Step:=50;
		
   50:  OP50_Camera_Done:=1;
   		Temp_Counter_LH:=OP50_Camera_FB.OP50_LH_Acquisition_ID;
		Temp_Counter_RH:=OP50_Camera_FB.OP50_RH_Acquisition_ID;
		IF Conv_Step_no>75 THEN
			Conv_Cam_Step   :=10;
			OP50_Camera_Done:=0;
		END_IF   
END_CASE


IF OP50_AutoRunning AND Control THEN
	Drum_Jam_Timer(IN:=(NOT I50_DRUM_FEED_CONV1_OVERFLW_I1101_0)OR(NOT I50_DRUM_FEED_CONV2_OVERFLW_I1101_1)); 
	Drum_Jam_Timer(PT:=T#40S);
	IF Drum_Jam_Timer.Q THEN
		OP50_ErrorActive:=1;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="OP50_Conveyor_Cam_Seq">
      <LineId Id="659" Count="10" />
      <LineId Id="657" Count="1" />
      <LineId Id="414" Count="24" />
      <LineId Id="680" Count="1" />
      <LineId Id="441" Count="22" />
      <LineId Id="614" Count="0" />
      <LineId Id="464" Count="28" />
      <LineId Id="676" Count="0" />
      <LineId Id="678" Count="1" />
      <LineId Id="677" Count="0" />
      <LineId Id="493" Count="0" />
      <LineId Id="555" Count="4" />
      <LineId Id="675" Count="0" />
      <LineId Id="674" Count="0" />
      <LineId Id="560" Count="24" />
      <LineId Id="670" Count="3" />
      <LineId Id="586" Count="23" />
      <LineId Id="611" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="648" Count="6" />
      <LineId Id="646" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>